code clean up. split /plugin install into /plugin install <URL> & /plugin search <Plugin name>. And split cogworks.plugin.ins into two permissions.